--- a/client/public/css/credits.css
+++ b/client/public/css/credits.css
@@ -58,11 +58,3 @@ h2 {
   color: white;
   opacity: 1;
 }
-
-/*
-p {
-  margin-top: 1em;
-  font-size: 300%;
-  font-style: italic;
-  font-weight: bold;
-} */
