--- a/client/public/css/menu.css
+++ b/client/public/css/menu.css
@@ -32,14 +32,6 @@ h1 {
   opacity: 1;
 }
 
-/*
-p {
-  margin-top: 1em;
-  font-size: 300%;
-  font-style: italic;
-  font-weight: bold;
-} */
-
 #menubox {
   background-color: rgba(31, 36, 36, 0.5);
   width:50%;
