--- a/client/public/css/title.css
+++ b/client/public/css/title.css
@@ -40,24 +40,6 @@ p {
   font-weight: bold;
 }
 
-/* .pulsate {
-    -webkit-animation: pulsate 1.25s ease-out;
-    -webkit-animation-iteration-count: infinite;
-    opacity: 0.5;
-}
-
-@-webkit-keyframes pulsate {
-    0% {
-        opacity: 0.25;
-    }
-    50% {
-        opacity: 1.0;
-    }
-    100% {
-        opacity: 0.25;
-    }
-} */
-
 /* Create an animatation that lasts .95sec on infinite loop */
 .pulsate {
     animation:pulsate .95s infinite;
