--- a/client/public/css/victory.css
+++ b/client/public/css/victory.css
@@ -44,10 +44,7 @@ p {
 
 #foundOut {
   position: absolute;
-  /* left: 50%;
-  top: 50%; */
   background-color: rgba(128,128,128,0.5);
-  /* background-image: url("../images/connectwork.png"); */
   border:3px solid #FFFFFF;
   text-align: center;
 }
